tests/typing/errors/missing_record_field/error.ae

type t = { foo : bool; bar : bool }

goal g:
  forall x:t . x = { foo = true }
